<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="P_Serial_Com" Id="{fa981f30-4d2c-4d48-ab6c-00ec78d696a1}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_Serial_Com
VAR
	fbSerialLineControl_EL6001_XRTM1: SerialLineControl; // XRTM1 Serial Comm Function Block
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[// These are the global IOs...don't forget to copy your data into them

(* EL6001 Serial port 0 com function *)
fbSerialLineControl_EL6001_XRTM1(Mode:= SERIALLINEMODE_EL6_22B,
						        pComIn:= ADR(Serial_stComIn_XRTM1),
						   	    pComOut:=ADR(Serial_stComOut_XRTM1),
						        SizeComIn:= SIZEOF(Serial_stComIn_XRTM1),
						        TxBuffer:= Serial_TXBuffer_XRTM1,
						        RxBuffer:= Serial_RXBuffer_XRTM1,
						        Error=>,
						        ErrorID=>);
]]></ST>
    </Implementation>
    <LineIds Name="P_Serial_Com">
      <LineId Id="3" Count="10" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>